{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 12,
  "lineage": "835c4f90-c1df-7b67-ceda-06109318e1e9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_a_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0045808c8be29837f1218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0045808c8be29837f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f8820b2e8b3bed5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0045808c8be29837f"
          },
          "dependencies": [
            "aws_route_table.rt_a",
            "aws_vpc.vpc-a",
            "aws_vpc.vpc-b",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_b_to_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da6231156c4dcbed3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0da6231156c4dcbed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0f8820b2e8b3bed5e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0da6231156c4dcbed"
          },
          "dependencies": [
            "aws_route_table.rt_b",
            "aws_vpc.vpc-a",
            "aws_vpc.vpc-b",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085409280:route-table/rtb-0045808c8be29837f",
            "id": "rtb-0045808c8be29837f",
            "owner_id": "491085409280",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "RouteTable-A"
            },
            "tags_all": {
              "Name": "RouteTable-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-00428b342271c76ce"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "id": "rtb-0045808c8be29837f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085409280:route-table/rtb-0da6231156c4dcbed",
            "id": "rtb-0da6231156c4dcbed",
            "owner_id": "491085409280",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "RouteTable-B"
            },
            "tags_all": {
              "Name": "RouteTable-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8891781f5af47b8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "id": "rtb-0da6231156c4dcbed",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0202b7004357477f8",
            "region": "us-east-1",
            "route_table_id": "rtb-0045808c8be29837f",
            "subnet_id": "subnet-02a0d68ebdeddd030"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "id": "rtbassoc-0202b7004357477f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.rt_a",
            "aws_subnet.subnet-a",
            "aws_vpc.vpc-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021f7137b12d140cb",
            "region": "us-east-1",
            "route_table_id": "rtb-0da6231156c4dcbed",
            "subnet_id": "subnet-07960517856905fc9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "id": "rtbassoc-021f7137b12d140cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.rt_b",
            "aws_subnet.subnet-b",
            "aws_vpc.vpc-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085409280:subnet/subnet-02a0d68ebdeddd030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a0d68ebdeddd030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491085409280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Subnet-a"
            },
            "tags_all": {
              "Name": "Subnet-a"
            },
            "vpc_id": "vpc-00428b342271c76ce"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "id": "subnet-02a0d68ebdeddd030",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc-a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085409280:subnet/subnet-07960517856905fc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07960517856905fc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "491085409280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Subnet-b"
            },
            "tags_all": {
              "Name": "Subnet-b"
            },
            "vpc_id": "vpc-0c8891781f5af47b8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "id": "subnet-07960517856905fc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085409280:vpc/vpc-00428b342271c76ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-02ffafd6e6e1c5cd1",
            "default_route_table_id": "rtb-071d3972db03ffcda",
            "default_security_group_id": "sg-0744df1359f54ce94",
            "dhcp_options_id": "dopt-064b88e7007685e05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00428b342271c76ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-071d3972db03ffcda",
            "owner_id": "491085409280",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC-A Requester"
            },
            "tags_all": {
              "Name": "VPC-A Requester"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "id": "vpc-00428b342271c76ce",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:491085409280:vpc/vpc-0c8891781f5af47b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0a02415cebabdb846",
            "default_route_table_id": "rtb-016e633c70d1c11b1",
            "default_security_group_id": "sg-0d8e257f11a8af248",
            "dhcp_options_id": "dopt-064b88e7007685e05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c8891781f5af47b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-016e633c70d1c11b1",
            "owner_id": "491085409280",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC-B Accepter"
            },
            "tags_all": {
              "Name": "VPC-B Accepter"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "491085409280",
            "id": "vpc-0c8891781f5af47b8",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0f8820b2e8b3bed5e",
            "peer_owner_id": "491085409280",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0c8891781f5af47b8",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-00428b342271c76ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc-a",
            "aws_vpc.vpc-b"
          ]
        }
      ]
    }
  ]
}